--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clingo = { version = "0.7.2", features = ["static-linking"] }
+#clingo = { version = "0.7.2", features = ["static-linking"] }
+clingo = { version = "0.7.2", features = ["static-linking"], git = "https://github.com/drwadu/clingo-rs", branch = "latest" }
+pest = "2.5.6"
+pest_derive = "2.5.6"
+thiserror = "1.0.40"
+
+[dev-dependencies]
+rand = "0.8"
